@@ -9,8 +9,6 @@ Should handle these soon.
 
 - Use conpressed motion events for clisp. [Philippe]
 
-- cd/pwd a la shell to navigate throw frames. [Philippe] 
-
 - Hide/Unhide child [Philippe]
 
 - Raise/lower child - this can be done with children order [Philippe]
@@ -27,6 +25,8 @@ Should handle these soon.
 
 MAYBE
 =====
+
+- cd/pwd a la shell to navigate throw frames. [Philippe] 
 
 - From stumpwm: [Philippe]
  "In other news stumpwm should catch unhandled errors, restart, and
@@ -51,3 +51,4 @@ Operation:
 - Remote access to the clfswm REPL [Philippe]
 
 - Undo/redo (any idea to implement this is welcome)
+
