@@ -100,8 +100,8 @@
 			  :initform nil
 			  :documentation "A list of forced unmanaged windows (wm-name or window)")
    (show-window-p :initarg :show-window-p :accessor frame-show-window-p :initform t)
-   (hidden-list :initarg :hidden-list :accessor frame-hidden-list :initform nil
-		:documentation "A list of hidden children")
+   (hidden-children :initarg :hidden-children :accessor frame-hidden-children :initform nil
+		    :documentation "A list of hidden children")
    (n-focused-child :initarg :n-focused-child :accessor frame-n-focused-child :initform 0
 		    :documentation "A number to choose which child to focus")
    (window :initarg :window :accessor frame-window :initform nil)
