@@ -1,5 +1,11 @@
 2008-05-28  Philippe Brochard  <pbrochard@common-lisp.net>
 
+	* src/clfswm-util.lisp (hide-current-child, unhide-a-child)
+	(unhide-all-children): New functions.
+
+	* src/clfswm-info.lisp (info-mode-menu): Handle symbols and
+	functions.
+
 	* src/clfswm-util.lisp (hide/show-frame-window): new function and
 	menu item.
 
